deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nabiz
  labels:
    app.kubernetes.io/part-of: nabiz
